2025-03-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test18-file-attributes)
	(tramp-test21-file-links): Adapt tests.

2025-03-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file): Adapt test.

2025-03-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (vc-handled-backends): Suppress only if noninteractive.
	(tramp-test11-copy-file, tramp-test12-rename-file)
	(tramp-test18-file-attributes, tramp-test21-file-links)
	(tramp--test-check-files): Adapt tests.

2025-02-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-enabled)
	(tramp-test03-file-name-host-rules): Don't wrap
	`tramp-cleanup-connection' with `ignore-errors'.

2025-02-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (top): Set `vc-handled-backends' to nil.
	(tramp--test-enabled): Rearrange code.

2024-12-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test39-make-lock-file-name): Adapt test.
	(tramp-test42-utf8): Do not run expensive tests on MS Windows.

2024-12-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (ert-batch-backtrace-right-margin): Set it to nil.
	(tramp--test-enabled): Fix regexps.

2024-11-30  Michael Albinus  <michael.albinus@gmx.de>

	* README: Mark, what's not available on GNU ELPA.

2024-11-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test47-read-password)
	(tramp-test47-read-otp-password, tramp-test47-read-fingerprint):
	Use `tramp-default-remote-shell' and
	`tramp-connection-properties'.  Cleanup at the end.
	(tramp-test47-read-security-key): New test.

2024-11-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test47-read-fingerprint): New test.

2024-11-17  Michael Albinus  <michael.albinus@gmx.de>

	* README: More details added.

	* tramp-tests.el (Commentary): Extend.
	(tramp--test-enabled): Exclude also old FUSE mount points from
	deletion.
